# roboco

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pymarkdown.json  .safety-project.ini  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONCURRENCY_AUDIT.md  CONTRIBUTING.md  Makefile  README.md  REBASE_REPORT_PR280.md  SECURITY.md  WORKFLOWS.md  alembic.ini  deployment.md  docker-compose.registry.yml  docker-compose.yaml  docker-compose.yml  git-smoke-test.md  mkdocs.yml  pyproject.toml  smoke_test.txt  usage.md  vulture_whitelist.py
.claude/: tmp-audit-rerun.js
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/scripts/: bump_version.py
.github/workflows/: agent-image-smoke.yml  ci.yml  cla.yml  code-ql.yml  codeql-js-ts.yml  docs.yml  e2e-smoke.yml  greetings.yml  labeler.yml  panel-ci.yml  release.yml  stale.yml  sync-labels.yml
.roboco/: conventions.yml
.tasks/: README.md  index.md
.tasks/initiatives/: README.md  roboco-audit-fix-plan.md
.tasks/templates/: README.md  blockers.md  bugfix.md  decisions.md  design.md  documentation.md  feature.md  handoff.md  journal.md  plan.md  qa-review.md  research.md
agents/blueprints/: README.md
agents/prompts/: base.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_persistence_tables.py  003_blocker_resolver_type.py  004_provider_routing.py  005_blocker_raised_by.py  006_gateway_columns.py  007_gateway_triggers_table.py  008_align_skills.py  009_enum_reconcile.py  010_audit_log_details_jsonb.py  011_drop_quarantined_state.py  012_align_agentrole_foundation.py  012_align_agentrole_team_with_foundation.py  013_drop_role_enum.py  014_drop_pm_approvals.py  015_drop_task_execution_outputs.py  015_prompter_tables.py  016_add_products_and_task_product_id.py  017_reconcile_orm_schema_drift.py  018_task_project_id_nullable.py  019_seed_default_providers.py  020_backfill_enum_values.py  021_add_prompter_tables.py  021_task_board_review_complete.py  022_default_branch_master.py  023_add_prompter_tracking_columns.py  023_prompt_session_tables.py  024_add_prompter_tables.py  025_agentrole_prompter.py  026_completed_dependency_ids.py  026_token_usage_tables.py  027_seed_self_hosted_provider.py  027_system_settings.py  028_seed_self_hosted_provider.py  029_project_quality_command.py  030_rag_chunks_content_schema.py  031_rag_chunks_fulltext.py  032_company_goals.py  033_pitches.py  034_agentrole_secretary.py  (+52 more)
deploy/base/: kustomization.yaml
docker/: agent-base.Dockerfile  agent-codex.Dockerfile  agent-dev-be.Dockerfile  agent-dev-fe.Dockerfile  agent-doc.Dockerfile  agent-gemini.Dockerfile  agent-grok-prompter.Dockerfile  agent-grok-secretary.Dockerfile  agent-grok.Dockerfile  agent-pm.Dockerfile  agent-pr-reviewer.Dockerfile  agent-prompter.Dockerfile  agent-qa-be.Dockerfile  agent-qa-fe.Dockerfile  agent-secretary.Dockerfile  agent-ux.Dockerfile  agent.Dockerfile  nginx.conf  orchestrator.Dockerfile  panel.Dockerfile  postgres-pgvector.Dockerfile  remotion.Dockerfile  sandbox-pg.Dockerfile  video-renderer.Dockerfile
docker/grok/: budget-feed.js  intake-tools.js  secret-scrub.js  secretary-tools.js
docker/postgres-init/: 01-create-extensions.sql
docker/scripts/: a2a-check-hook.sh  backup-entrypoint.sh  bash-guard-hook.sh  codex-cli-agent-entrypoint.sh  fable-bash-discipline-hook.sh  fable-honesty-nudge-hook.sh  fable-precompact-hook.sh  fable-prompt-nudge-hook.sh  fable-stop-gate-hook.sh  gemini-cli-agent-entrypoint.sh  grok-agent-entrypoint.sh  grok-cli-agent-entrypoint.sh  playwright-mcp-entrypoint.sh  post-tool-budget-hook.sh  pre-compact-hook.sh  sdk-startup-hook.sh  session-end-hook.sh  stop-hook.sh  traceability-hook.sh  usage-report-hook.sh  user-prompt-hook.sh
docs/: WORKFLOWS.md  deployment.md  forms-audit.md  how-to.md  index.md
docs-redirects/: index.html
docs-redirects/api/: index.html
docs-redirects/company/: index.html
docs-redirects/deploy/: index.html
docs-redirects/get-started/: index.html
docs-redirects/how-to/: index.html
docs-redirects/models/: index.html
docs-redirects/operations/: index.html
docs-redirects/optional/: index.html
docs-redirects/panel/: index.html
docs-redirects/troubleshooting/: index.html
docs/api/: auth.md  index.md  rest-api.md  websockets.md
docs/architecture/: README.md  api_overview.md  task_lifecycle.md  workspaces.md
docs/backend/: README.md  ci-patterns.md
docs/bugs/: README.md
docs/ci/: CI_DIAGNOSIS_2026-06-26.md  index.md
docs/company/: agent-gateway.md  index.md  megatask.md  merge-model.md  org-and-roles.md  task-lifecycle.md
docs/components/: a2a-filter-control.md
docs/deploy/: bootstrap-and-seeds.md  data-and-migrations.md  deployment.md  env-reference.md  index.md
docs/design/: prompter-interaction-spec.md
docs/features/: README.md
docs/frontend/: README.md  a2a-conversation-first-layout.md  a2a-filtering.md  api-rate-limiting.md  hooks.md
docs/get-started/: first-project.md  first-task.md  index.md  (+1 more)
motion/: README.md  node_modules  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  remotion.config.ts  tsconfig.json  vitest.config.js
panel/: .dockerignore  .prettierignore  .prettierrc.json  README.md  UPGRADE.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
remotion-renderer/: ensure-browser.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.js  server.js
roboco/: __init__.py  agents_config.py  bootstrap.py  cli.py  config.py  exceptions.py  logging.py  security.py  vault.py
scripts/: bootstrap.sh  build_lifecycle_artifacts.py  gen_docs_redirects.py  rebuild_map_concat.py  reflow_md.py  regenerate_verb_tables.py  reset_runtime_state.sh  reset_runtime_state.sql  verify_postgres_enums.py
tests/: conftest.py
video-renderer/: ensure-browser.mjs  package-lock.json  package.json  pnpm-lock.yaml  render.js  render.test.js  server.js  server.test.js
(+2530 files in other folders)
